Fix app error codes dashboard
This only partly works on AWS at present because we're now using puppet node
names instead of machine names.  The node names have underscores where the
machine names had hyphens, so what would have matched`;

`calculators-frontend*` will now only match `calculators_frontend`.

As a result, only apps that are on `frontend` boxes are currently disaplyed on
https://grafana.blue.production.govuk.digital/dashboard/file/application_http_error_codes.json

We were also referencing machine types that don't exist any more (performance,
email-campaign), so using a more general wild card should fix much of this.

--- a/modules/grafana/files/dashboards/application_http_error_codes.json
+++ b/modules/grafana/files/dashboards/application_http_error_codes.json
@@ -56,12 +56,8 @@
           "steppedLine": false,
           "targets": [
             {
-              "target": "groupByNode(stats.frontend-*.nginx_logs.*.http_4xx, 3, \"sumSeries\")",
+              "target": "groupByNode(stats.*frontend-*.nginx_logs.*.http_4xx, 3, \"sumSeries\")",
               "refId": "A"
-            },
-            {
-              "target": "groupByNode(stats.{calculators,draft-email-campaign,draft,email-campaign,performance,whitehall}-frontend-*.nginx_logs.*.http_4xx, 3, \"sumSeries\")",
-              "refId": "B"
             }
           ],
           "title": "4XX by Application",
@@ -142,12 +138,8 @@
           "steppedLine": false,
           "targets": [
             {
-              "target": "groupByNode(stats.frontend-*.nginx_logs.*.http_5xx, 3, \"sumSeries\")",
+              "target": "groupByNode(stats.*frontend-*.nginx_logs.*.http_5xx, 3, \"sumSeries\")",
               "refId": "A"
-            },
-            {
-              "target": "groupByNode(stats.{calculators,draft-email-campaign,draft,email-campaign,performance,whitehall}-frontend-*.nginx_logs.*.http_5xx, 3, \"sumSeries\")",
-              "refId": "B"
             }
           ],
           "title": "5XX by Application",
