--- a/hieradata_aws/class/staging/db_admin.yaml
+++ b/hieradata_aws/class/staging/db_admin.yaml
@@ -22,7 +22,7 @@ govuk_env_sync::tasks:
     url: "govuk-staging-database-backups"
     path: "postgresql-backend"
   "pull_content_audit_tool_production_daily":
-    ensure: "present"
+    ensure: "absent"
     hour: "2"
     minute: "12"
     action: "pull"
@@ -33,7 +33,7 @@ govuk_env_sync::tasks:
     url: "govuk-production-database-backups"
     path: "postgresql-backend"
   "pull_content_tagger_production_daily":
-    ensure: "present"
+    ensure: "absent"
     hour: "2"
     minute: "7"
     action: "pull"
@@ -44,7 +44,7 @@ govuk_env_sync::tasks:
     url: "govuk-production-database-backups"
     path: "postgresql-backend"
   "pull_collections_publisher_production_daily":
-    ensure: "present"
+    ensure: "absent"
     hour: "2"
     minute: "22"
     action: "pull"
@@ -55,7 +55,7 @@ govuk_env_sync::tasks:
     url: "govuk-production-database-backups"
     path: "mysql"
   "pull_contacts_production_daily":
-    ensure: "present"
+    ensure: "absent"
     hour: "2"
     minute: "55"
     action: "pull"
@@ -88,7 +88,7 @@ govuk_env_sync::tasks:
     url: "govuk-production-database-backups"
     path: "postgresql-backend"
   "pull_mysql_whitehall_production_daily":
-    ensure: "present"
+    ensure: "absent"
     hour: "2"
     minute: "26"
     action: "pull"
@@ -110,7 +110,7 @@ govuk_env_sync::tasks:
     url: "govuk-production-database-backups"
     path: "postgresql-backend"
   "pull_release_production_daily":
-    ensure: "present"
+    ensure: "absent"
     hour: "2"
     minute: "28"
     action: "pull"
@@ -121,7 +121,7 @@ govuk_env_sync::tasks:
     url: "govuk-production-database-backups"
     path: "mysql"
   "pull_search_admin_production_daily":
-    ensure: "present"
+    ensure: "absent"
     hour: "2"
     minute: "30"
     action: "pull"
@@ -143,7 +143,7 @@ govuk_env_sync::tasks:
     url: "govuk-production-database-backups"
     path: "mysql"
   "pull_service-manual-publisher_production_daily":
-    ensure: "present"
+    ensure: "absent"
     hour: "2"
     minute: "4"
     action: "pull"
@@ -154,7 +154,7 @@ govuk_env_sync::tasks:
     url: "govuk-production-database-backups"
     path: "postgresql-backend"
   "pull_support-contacts_production_daily":
-    ensure: "present"
+    ensure: "absent"
     hour: "2"
     minute: "3"
     action: "pull"
@@ -165,7 +165,7 @@ govuk_env_sync::tasks:
     url: "govuk-production-database-backups"
     path: "postgresql-backend"
   "pull_content_publisher_production_daily":
-    ensure: "present"
+    ensure: "absent"
     hour: "2"
     minute: "14"
     action: "pull"
