--- a/hieradata_aws/common.yaml
+++ b/hieradata_aws/common.yaml
@@ -491,6 +491,7 @@ govuk::apps::email_alert_api::email_address_override_whitelist:
   - complaint@simulator.amazonses.com
   - deborah.chua@digital.cabinet-office.gov.uk
   - kevin.dew@digital.cabinet-office.gov.uk
+  - michael.s.walker@digital.cabinet-office.gov.uk
   - ruben.arakelyan@digital.cabinet-office.gov.uk
   - thomas.leese@digital.cabinet-office.gov.uk
   - tijmen.brommet@digital.cabinet-office.gov.uk
