--- a/hieradata_aws/common.yaml
+++ b/hieradata_aws/common.yaml
@@ -1049,7 +1049,9 @@ grafana::dashboards::application_dashboards:
     # No data in kibana
     show_controller_errors: false
     show_slow_requests: false
-  collections: {}
+  collections:
+    instance_prefix: 'frontend'
+    show_memcached: true
   collections-publisher:
     show_sidekiq_graphs: true
     has_workers: true
@@ -1110,6 +1112,8 @@ grafana::dashboards::application_dashboards:
   local-links-manager:
     dependent_app_5xx_errors:
       - frontend
+    instance_prefix: 'backend'
+    show_memcached: true
   manuals-frontend: {}
   manuals-publisher:
     show_sidekiq_graphs: true
@@ -1128,6 +1132,8 @@ grafana::dashboards::application_dashboards:
   publishing-api:
     show_sidekiq_graphs: true
     has_workers: true
+    instance_prefix: 'publishing_api'
+    show_memcached: true
   release: {}
   router-api: {}
   rummager:
