Sort the values in the tooltip for the NGinx Logs Grafana dashboard
So that the higher values appear at the top, as this makes it easier
to read.

--- a/modules/grafana/files/dashboards/nginx_logs.json
+++ b/modules/grafana/files/dashboards/nginx_logs.json
@@ -83,7 +83,8 @@
           "tooltip": {
             "msResolution": true,
             "shared": true,
-            "value_type": "cumulative"
+            "value_type": "cumulative",
+            "sort": 2
           },
           "type": "graph",
           "xaxis": {
