--- a/hieradata/staging.yaml
+++ b/hieradata/staging.yaml
@@ -485,7 +485,9 @@ hosts::production::management::hosts:
     service_aliases:
       - 'puppet'
       - 'puppetdb'
-      - 'puppetmaster-2'
+      - "puppetmaster-2.%{hiera('app_domain')}"
+  puppetmaster-2:
+    ip: '10.2.0.6'
   monitoring-1:
     ip: '10.2.0.20'
     legacy_aliases:
