--- a/hieradata_aws/common.yaml
+++ b/hieradata_aws/common.yaml
@@ -645,9 +645,9 @@ govuk::apps::rummager::nagios_memory_critical: 4900
 govuk::apps::rummager::enable_bulk_reindex_listener: true
 govuk::apps::rummager::enable_publishing_listener: true
 govuk::apps::rummager::enable_govuk_index_listener: true
-govuk::apps::rummager::rabbitmq::enable_bulk_reindex_listener: true
-govuk::apps::rummager::rabbitmq::enable_govuk_index_listener: true
-govuk::apps::rummager::rabbitmq::enable_publishing_listener: true
+govuk::apps::rummager::rabbitmq::enable_bulk_reindex_listener: false
+govuk::apps::rummager::rabbitmq::enable_govuk_index_listener: false
+govuk::apps::rummager::rabbitmq::enable_publishing_listener: false
 govuk::apps::rummager::rabbitmq_user: 'rummager-v2'
 govuk::apps::rummager::redis_host: 'backend-redis'
 govuk::apps::rummager::redis_port: '6379'
