--- a/hieradata_aws/common.yaml
+++ b/hieradata_aws/common.yaml
@@ -1038,7 +1038,7 @@ grafana::dashboards::application_dashboards:
   content-data-admin:
     show_sidekiq_graphs: true
     has_workers: true
-  content-performance-manager:
+  content-data-api:
     show_sidekiq_graphs: true
     has_workers: true
   content-publisher:
