--- a/hieradata/common.yaml
+++ b/hieradata/common.yaml
@@ -384,6 +384,7 @@ govuk::apps::content_audit_tool::db::backend_ip_range: "%{hiera('environment_ip_
 govuk::apps::content_audit_tool::redis_host: "%{hiera('sidekiq_host')}"
 govuk::apps::content_audit_tool::redis_port: "%{hiera('sidekiq_port')}"
 
+govuk::apps::content_data_admin::enabled: false
 govuk::apps::content_data_admin::db_hostname: "postgresql-primary-1.backend"
 govuk::apps::content_data_admin::db_port: 6432
 govuk::apps::content_data_admin::db_allow_prepared_statements: false
