set log retention on search machines to 7 days
We only need to keep the logs for 7 days for this machine type (checked with app developer) and this will reduce the disk space use that we currently have.

--- a/hieradata_aws/class/staging/search.yaml
+++ b/hieradata_aws/class/staging/search.yaml
@@ -21,3 +21,6 @@ govuk_env_sync::tasks:
     temppath: "/tmp/es_snapshot_everything"
     url: "govuk-staging"
     path: "elasticsearch5"
+
+logrotate::conf::days_to_keep: 7
+nginx::logging::days_to_keep: 7
