--- a/hieradata_aws/class/production/search.yaml
+++ b/hieradata_aws/class/production/search.yaml
@@ -10,3 +10,6 @@ govuk_env_sync::tasks:
     temppath: "/tmp/es_snapshot_everything"
     url: "govuk-production"
     path: "elasticsearch5"
+
+logrotate::conf::days_to_keep: 7
+nginx::logging::days_to_keep: 7
