--- a/hieradata_aws/production.yaml
+++ b/hieradata_aws/production.yaml
@@ -258,6 +258,10 @@ monitoring::checks::rds::region: 'eu-west-1'
 monitoring::checks::cache::region: 'eu-west-1'
 monitoring::contacts::notify_graphite: true
 monitoring::contacts::notify_pager: true
+monitoring::contacts::notify_slack: true
+monitoring::contacts::slack_channel: '#govuk-alerts'
+monitoring::contacts::slack_username: 'AWS Production'
+monitoring::contacts::slack_alert_url: "https://alert.%{hiera('app_domain')}/cgi-bin/icinga/status.cgi"
 monitoring::edge::enabled: true
 monitoring::pagerduty_drill::enabled: true
 
