--- a/hieradata/development.yaml
+++ b/hieradata/development.yaml
@@ -15,6 +15,8 @@ govuk::deploy::setup::ssh_keys:
 
 govuk::app::nginx_vhost::asset_pipeline_enabled: false
 
+govuk::apps::cache_clearing_service::enabled: true
+
 govuk::node::s_development::apps:
   - 'asset_manager'
   - 'authenticating_proxy'
