Add cache_clearing queue switch, turn off in Carrenza
- As we turn off the cache_clearing_service in Carrenza, the queue
access config is no longer required
- To remove all remnants of cache_clearing_service in Carrenza, we
remove the queue access for the app there as well
- To remove the queue config, it was necessary to introduce an
enable/disable switch
- Set the default of the switch to "false" as it is more intuitive,
subsequently added option enabled: true in hieradata_aws and for the
development-vm

--- a/hieradata/development.yaml
+++ b/hieradata/development.yaml
@@ -16,6 +16,7 @@ govuk::deploy::setup::ssh_keys:
 govuk::app::nginx_vhost::asset_pipeline_enabled: false
 
 govuk::apps::cache_clearing_service::enabled: true
+govuk::apps::cache_clearing_service::rabbitmq::enabled: true
 
 govuk::node::s_development::apps:
   - 'asset_manager'
