--- a/hieradata_aws/class/production/search.yaml
+++ b/hieradata_aws/class/production/search.yaml
@@ -13,3 +13,5 @@ govuk_env_sync::tasks:
 
 logrotate::conf::days_to_keep: 7
 nginx::logging::days_to_keep: 7
+
+govuk_search::prune::es_repo: "govuk-production"
