--- a/hieradata/integration.yaml
+++ b/hieradata/integration.yaml
@@ -145,7 +145,7 @@ govuk_sudo::sudo_conf:
 govuk_ppa::path: 'preview'
 
 grafana::dashboards::machine_suffix_metrics: '_integration'
-grafana::dashboards::application_dashboards: []
+grafana::dashboards::application_dashboards: {}
 
 hosts::production::ip_api_lb: '10.1.4.254'
 hosts::production::ip_backend_lb: '10.1.3.254'
