Make transition app absent in Carrenza
Update c7f3515

Transition has been migrated to AWS in staging/production. We need
to ensure the app resources are removed from the Carrenza machines
because there are cron jobs still trying to run tasks that are filling
disk space.

--- a/hieradata_aws/common.yaml
+++ b/hieradata_aws/common.yaml
@@ -347,6 +347,8 @@ filebeat::prospectors:
 
 gdal::repo::apt_mirror_hostname: "%{hiera('apt_mirror_hostname')}"
 
+govuk::apps::transition::ensure: 'present'
+
 govuk::apps::asset_manager::jwt_auth_secret: "%{hiera('jwt_auth_secret')}"
 govuk::apps::asset_manager::mongodb_nodes:
   - 'mongo-1'
