Make healthcheck timeouts create critical alerts
Currently healthcheck timeouts create UNKNOWN alerts.
This change intends to make them prompt CRITICAL alerts.

It also increases the timeout on healthchecks.

In the check_app_health command, we dont set the flag -u,

Usage: check_nrpe -H <host> [ -b <bindaddr> ] [-4] [-6] [-n] [-u] [-p <port>] [-t <timeout>] [-c <command>] [-a <arglist...>]

Options:
  ...
  -u         = Make socket timeouts return an UNKNOWN state instead of CRITICAL

This means timeouts will lead to critical alerts. This
command is now used by all healthchecks.

Timeouts for other requests will still prompt
unknown alerts.

Trello: https://trello.com/c/Zj3YjqC5/564.

--- a/modules/icinga/files/etc/nagios-plugins/config/check_nrpe.cfg
+++ b/modules/icinga/files/etc/nagios-plugins/config/check_nrpe.cfg
@@ -9,3 +9,10 @@ define command {
     command_name    check_nrpe_1arg
     command_line    /usr/lib/nagios/plugins/check_nrpe -H $HOSTADDRESS$ -t 20 -c $ARG1$ -u
 }
+
+# this command runs program $ARG1$ with arguments $ARG2$
+# it is for checking application health; timeouts should prompt critical alerts
+define command {
+    command_name    check_app_health
+    command_line    /usr/lib/nagios/plugins/check_nrpe -H $HOSTADDRESS$ -t 30 -c $ARG1$ -a $ARG2$
+}
