Add datagovuk_publish to .yaml files
`datagovuk_publish` is hosted on the Paas which is different to the
rest of our GOV.UK apps. We only need to monitor its healthchecks
so it makes sense to add it to the `monitoring` class of machine.

--- a/hieradata_aws/production.yaml
+++ b/hieradata_aws/production.yaml
@@ -85,6 +85,9 @@ node_class: &node_class
   mirrorer:
     apps:
       - govuk-crawler-worker
+  monitoring:
+    apps:
+      - datagovuk_publish
   router_backend:
     apps:
       - router-api
@@ -115,6 +118,7 @@ govuk::apps::content_store::performance_platform_big_screen_view_url: 'https://p
 govuk::apps::content_store::performance_platform_spotlight_url: 'https://performance-platform-spotlight-production.cloudapps.digital'
 govuk::apps::content_store::plek_service_whitehall_frontend_uri: 'https://whitehall-frontend.publishing.service.gov.uk'
 
+govuk::apps::datagovuk_publish::host: 'publish-data-beta-production.cloudapps.digital'
 govuk::apps::email_alert_service::enabled: false
 govuk::apps::email_alert_service::rabbitmq::ensure: 'absent'
 govuk::apps::email_alert_api::db::backend_ip_range: '10.13.3.0/24'
