--- a/hieradata_aws/staging.yaml
+++ b/hieradata_aws/staging.yaml
@@ -242,6 +242,8 @@ monitoring::checks::sidekiq::enable_support_check: false
 monitoring::checks::ses::region: 'eu-west-1'
 monitoring::checks::rds::region: 'eu-west-1'
 monitoring::checks::cache::region: 'eu-west-1'
+monitoring::contacts::notify_slack: true
+monitoring::contacts::slack_channel: '#govuk-alerts-staging'
 monitoring::contacts::slack_username: 'Staging (AWS)'
 
 
