--- a/hieradata/common.yaml
+++ b/hieradata/common.yaml
@@ -1507,7 +1507,8 @@ mongodb::server::version: '2.4.9'
 monitoring::checks::aws_origin_domain: 'dev.govuk.digital'
 monitoring::checks::http_username: "%{hiera('http_username')}"
 monitoring::checks::http_password: "%{hiera('http_password')}"
-monitoring::contacts::slack_alert_url: "https://alert.%{hiera('app_domain')}/cgi-bin/icinga/status.cgi"
+monitoring::contacts::slack_icinga_status_cgi_url: "https://alert.%{hiera('app_domain')}/cgi-bin/icinga/status.cgi"
+monitoring::contacts::slack_icinga_extinfo_cgi_url: "https://alert.%{hiera('app_domain')}/cgi-bin/icinga/extinfo.cgi"
 
 monitoring::checks::smokey::features:
   check_bouncer:
