Gemstash Dockerfile, swith from openssl to libressl
- The Alpine image upgrade we are implementing in another commit on this
branch breaks the image build
- This seems fixed if using libressl instead of openssl

solo: @schmie

--- a/modules/govuk_containers/files/gemstash/Dockerfile
+++ b/modules/govuk_containers/files/gemstash/Dockerfile
@@ -22,8 +22,8 @@ RUN apk update \
         linux-headers \
         make \
         ncurses-dev \
-        openssl \
-        openssl-dev \
+        libressl \
+        libressl-dev \
         procps \
         readline-dev \
         ruby \
